RESOLVED FIXED308425
[YARR] JIT non-greedy backreference should restore index on backtrack failure
https://bugs.webkit.org/show_bug.cgi?id=308425
Summary [YARR] JIT non-greedy backreference should restore index on backtrack failure
Sosuke Suzuki
Reported 2026-02-22 00:17:34 PST
...
Attachments
Sosuke Suzuki
Comment 1 2026-02-22 00:22:43 PST
EWS
Comment 2 2026-02-25 23:00:16 PST
Committed 308264@main (2fb117dc7dcd): <https://commits.webkit.org/308264@main> Reviewed commits have been landed. Closing PR #59202 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-25 23:01:13 PST
Note You need to log in before you can comment on or make changes to this bug.